<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textColor="@color/fond">

    <ImageView
        android:id="@+id/imageGroupe"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/image_du_groupe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/festival_round" />

    <TextView
        android:id="@+id/textGroupe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/groupe"
        android:textColor="@color/texte"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGroupe" />

    <TextView
        android:id="@+id/textPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lieu"
        android:textColor="@color/texte"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textGroupe" />

    <TextView
        android:id="@+id/textPassage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/scene"
        android:textColor="@color/texte"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPlace" />

    <TextView
        android:id="@+id/textWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/site_web"
        android:autoLink="web"
        android:focusable="true"
        android:textColor="@color/texte"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassage" />

    <TextView
        android:id="@+id/textTexte"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:scrollbarDefaultDelayBeforeFade="220"
        android:scrollbarFadeDuration="220"
        android:text="@string/description"
        android:textColor="@color/texte"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textParticipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWeb" />

    <TextView
        android:id="@+id/textParticipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/pouce_down"
        android:textAlignment="textEnd"
        android:textSize="40sp"
        android:textColor="@color/khaki"
        android:tooltipText="Cliquez pour ajouter à votre calendrier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints,RtlCompat" />

    <TextView
        android:id="@+id/textFavori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/coeur_brise"
        android:textAlignment="textEnd"
        android:textSize="40sp"
        android:textColor="@color/lightcoral"
        android:tooltipText="Cliquez pour ajouter à vos favoris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints,RtlCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>